[project]
name = "atcoder-abc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kskkrt", email = "kskkrt0326@gmail.com" }
]
dependencies = [
    "numpy>=1.26.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "black>=23.12.1",
    "ruff>=0.1.13",
]

[tool.hatch.metadata]
allow-direct-references = true
